Updates from Overleaf

--- a/sections/02_abstract.tex
+++ b/sections/02_abstract.tex
@@ -58,7 +58,7 @@ Thrombolysis was, using observational data, was found to have at least as much b
 \section*{Plain Language Summary}
 \addcontentsline{toc}{section}{Plain Language Summary}
 
-\textbf{What is the problem?} Use of clot-busting treatment (`\textit{thombolysis}') in stroke varies a great deal between hospitals.
+\textbf{What is the problem?} Use of clot-busting treatment in stroke varies a great deal between hospitals.
 
 \textbf{What did we know?} We knew that the largest cause of this variation was differences between hospitals in which patients they choose to give  clot-busting treatment to. Some doctors are worried that the risk from this treatment can often outweigh the benefits, and worry that use of this treatment in the real world won’t have the same benefit that the clinical trials predicted it would have.
 
@@ -66,4 +66,4 @@ Thrombolysis was, using observational data, was found to have at least as much b
 
 \textbf{What did we do?} We used ‘Artificial Intelligence’ to learn which patients different hospitals would give lot-busting treatment to, and to learn which patients would likely have a better outcome if this treatment was used.
 
-\textbf{What did we find out?} We found out that clot-busting treatment was at least as effective in real use as the clinical trials predicted, and hospitals choosing to use it more are very likely saving more lives and reducing disability from stroke. We also found out speeding up giving this treatment would improve the number of people who could receive it, and would mean everyone receiving it would benefit more from it. We found that doctors were interested in our work, but they need to be convinced our ‘Artificial Intelligence’ is right, but we are hopeful that our results will give doctors more confidence to use this treatment more often, and to always give it as fast as possible.
+\textbf{What did we find out?} We found out that clot-busting treatment was at least as effective in real use as the clinical trials predicted, and hospitals choosing to use it more are very likely saving more lives and reducing disability from stroke. We now understand what doctors look at when deciding to use it or not, and what affects patient outcomes. We  found out speeding up giving this treatment would improve the number of people who could receive it, and would mean everyone receiving it would benefit more from it. We found that doctors were interested in our work, but they need to be convinced our ‘Artificial Intelligence’ is right, but we are hopeful that our results will give doctors more confidence to use this treatment more often, and to always give it as fast as possible.
