Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 
 % Packages
-\usepackage[a4paper, left=1.7cm, right=1.7cm, top=1.5cm, bottom=1.5cm]{geometry}
+\usepackage[a4paper, left=1.5cm, right=1.5cm, top=1.5cm, bottom=1.5cm]{geometry}
 \usepackage{authblk} % For author formatting
 \usepackage{caption} % For figure and table captions
 \usepackage{cclicenses} % For creative commons license
@@ -76,16 +76,17 @@
 \include{sections/02_abstract}
 %TC:endignore
 \include{sections/03_intro}
-\include{sections/04_study_pathway}
-\include{sections/06_data}
-\include{sections/05_paper_overview}
+\input{sections/04_study_pathway}
+\input{sections/06_data}
+\input{sections/05_paper_overview}
 \include{sections/11_paper_1}
 \include{sections/12_paper_2}
 \include{sections/13_paper_3}
 \include{sections/14_paper_4}
 \include{sections/15_paper_5}
-\include{sections/21_discussion}
-\include{sections/23_other}
+\input{sections/20_other_outputs}
+\input{sections/21_discussion}
+\input{sections/23_other}
 
 
 
