--- a/sections/02_abstract.tex
+++ b/sections/02_abstract.tex
@@ -53,7 +53,7 @@ Use of thrombolysis to treat emergency stroke patients varies considerably betwe
 
 \textbf{Conclusions}
 
-Thrombolysis was, using observational data, was found to have at least as much benefit as predicted by the clinical trial meta-analysis. Variation in decision-making concerning thrombolysis is leading to significant between-hospital variation in thrombolysis use, and is leading to variation in outcomes. Stroke teams with higher thrombolysis use are predicted to be generating better patient outcomes. 
+Using observational data and machine learning, thrombolysis was found to have at least as much benefit as predicted by the clinical trial meta-analysis. Variation in decision-making concerning thrombolysis is leading to significant between-hospital variation in thrombolysis use, and is leading to variation in outcomes. Stroke teams with higher thrombolysis use are predicted to be generating better patient outcomes. 
 
 \section*{Plain Language Summary}
 \addcontentsline{toc}{section}{Plain Language Summary}
