--- a/sections/05_paper_overview.tex
+++ b/sections/05_paper_overview.tex
@@ -1,4 +1,4 @@
-\section{Overview of project papers}
+\section{Overview of project papers: Study overviews and key findings}
 \label{sec:papers}
 
 \subsection{Paper 1: Stroke physicians' and staff perspectives on machine learning to optimise thrombolysis decision making in stroke: a qualitative study. \cite{jarvie_stroke_2024}}
@@ -58,16 +58,17 @@ Explainable machine learning model to investigate clinical benefit of thrombolys
 
 \textbf{Study type and population}
 
-Explainable machine learning model to investigate thrombolysis decision making (at stroke unit level) and clinical benefit of thrombolysis. The model was based on 6 years of emergency ischaemic stroke admissions that arrived at an acute stroke team in England and Wales by ambulance after their stroke onset, had their scan within 255 minutes of stroke onset, and were not receiving anticoagulants for atrial fibrillation (78,396 patients). Includes 111 acute stroke hospitals (each with at least 250 stroke admissions and at least 10 thrombolysis procedures in the study period).&
+Explainable machine learning model to investigate thrombolysis decision making (at stroke unit level) and clinical benefit of thrombolysis. The model was based on 6 years of emergency ischaemic stroke admissions that arrived at an acute stroke team in England and Wales by ambulance after their stroke onset, had their scan within 255 minutes of stroke onset, and were not receiving anticoagulants for atrial fibrillation (78,396 patients). Includes 111 acute stroke hospitals (each with at least 250 stroke admissions and at least 10 thrombolysis procedures in the study period).
 
 \textbf{Key findings}
 
 \begin{itemize}
-    \item 44\% of the study population received thrombolysis 60\% of the study population were predicted to benefit from thrombolysis (improved probability-weighted mRS and reduced probability of mRS 5-6).
+    \item 44\% of the study population received thrombolysis. 60\% of the study population were predicted to benefit from thrombolysis (improved probability-weighted mRS and reduced probability of mRS 5-6).
     
     \item 73\% of those treated were predicted to have a better outcome with thrombolysis, and 49\% of those not treated were predicted to have a better outcome with thrombolysis.
     
-    \item Patients with mismatched treatment decisions (actual thrombolysis use vs. predicted to benefit) can not be identified from an isolated feature value. 
+    \item Patients with mismatched treatment decisions (actual thrombolysis use vs. predicted to benefit) can not be identified from an isolated feature value.
+    
     \item Individual hospitals vary in balancing maximising benefit from thrombolysis vs. avoiding any possible harm.
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
