--- a/sections/11_paper_1.tex
+++ b/sections/11_paper_1.tex
@@ -1,4 +1,4 @@
-\section{Paper 1: Stroke physicians' and staff perspectives on machine learning to optimise thrombolysis decision making in stroke: a qualitative study. \cite{jarvie_stroke_2024}}\label{sec:paper_1}
+\section{Paper 1 highlights: Stroke physicians' and staff perspectives on machine learning to optimise thrombolysis decision making in stroke: a qualitative study. \cite{jarvie_stroke_2024}}\label{sec:paper_1}
 
 \subsection{Objective}
 
