--- a/sections/12_paper_2.tex
+++ b/sections/12_paper_2.tex
@@ -1,4 +1,4 @@
-\section{Paper 2: What would other emergency stroke teams do? Using explainable machine learning to understand variation in thrombolysis practice.\cite{pearn_what_2023}}\label{sec:paper_2}
+\section{Paper 2 highlights: What would other emergency stroke teams do? Using explainable machine learning to understand variation in thrombolysis practice.\cite{pearn_what_2023}}\label{sec:paper_2}
 
 \subsection{Objective}
 
