--- a/sections/14_paper_4.tex
+++ b/sections/14_paper_4.tex
@@ -1,4 +1,4 @@
-\section{Paper 4: Are the patients who would benefit from thrombolysis the same ones as those receiving it? A machine learning study of the UK stroke registry.\cite{pearn_are_2024}}\label{sec:paper_4}
+\section{Paper 4 highlights: Are the patients who would benefit from thrombolysis the same ones as those receiving it? A machine learning study of the UK stroke registry.\cite{pearn_are_2024}}\label{sec:paper_4}
 
 \subsection{Objective}
 
