--- a/sections/15_paper_5.tex
+++ b/sections/15_paper_5.tex
@@ -1,4 +1,4 @@
-\section{Paper 5: Identifying levers for improving thrombolysis use and outcomes – combining clinical pathway simulation and machine learning applied to the UK stroke registry.\cite{pearn_identifying_2024}} \label{sec:paper_5}
+\section{Paper 5 highlights: Identifying levers for improving thrombolysis use and outcomes – combining clinical pathway simulation and machine learning applied to the UK stroke registry.\cite{pearn_identifying_2024}} \label{sec:paper_5}
 
 \subsection{Objective}
 
