--- a/sections/21_discussion.tex
+++ b/sections/21_discussion.tex
@@ -2,39 +2,6 @@
 
 \subsection{Principle findings}
 
-See section{\label{sec:papers}} for an overview of key findings.
-
-Qualitative research identified that:
-
-\begin{itemize}
-    \item It is important to demonstrate integrity of the modelling, given some concerns about the quality of individual SSNAP data.
-
-    \item Evidence from this research and elsewhere indicates that the ED physicians’ may have less confidence in the evidence base for, and safety of thrombolysis.
-
-    \item Perceived lack of funding/resource and stroke workforce shortages may impede quality improvement and adoption of new technologies such as SAMueL-2. It will therefore be vital to address these concerns to ensure sustained use and adoption.
-
-\end{itemize}
-
-Machine learning and modelling identified that:
-
-\begin{itemize}
-    \item Thrombolysis use in patients arriving within 4 h of known or estimated stroke onset ranged 7\% -49\% between hospitals. 
-    
-    \item The odds of receiving thrombolysis reduced 9-fold over the first 120 min of arrival-to-scan time, varied 30- fold with stroke severity, reduced 3-fold with estimated rather than precise stroke onset time, fell 6-fold with increasing pre-stroke disability, fell 4-fold with onset during sleep, fell 5-fold with use of anticoagulants, fell 2-fold between 80 and 110 years of age, reduced 3-fold between 120 and 240 min of onset-to-arrival time and varied 13-fold between hospitals. 
-    
-    \item The majority of between-hospital variance in thrombolysis use, in patients arriving within 4 h of known or estimated stroke onset, was explained by the hospital, rather than the differences in local patient populations.
-    
-    \item Thrombolysis was found to be associated with a statistically significant improvement in the odds of having a good outcome using any mRS threshold. Regression analysis predicted a maximum 2.5-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 5 hours 28 minutes post-onset. The observed beneficial effect is very similar to Emberson’s meta-analysis of a maximum 2.0-fold improvement in odds of achieving mRS 0-1, with a decline to no treatment effect at 6 hours 88 minutes post-onset.
-    
-    \item Of those patients arriving by ambulance, who had a head scan within 225 minutes of known or estimated stroke onset, and were not takinf anticoagulant medication for atrial fibrillation, 60\% were predicted to have a better outcome with thrombolysis (improved probability-weighted mRS and reduced probability of mRS 5-6). 73\% of those treated were predicted to have a better outcome with thrombolysis, and 49\% of those not treated were predicted to have a better outcome with thrombolysis. Patients with mismatched treatment decisions (actual thrombolysis use vs. predicted to benefit) can not be identified from an isolated feature value. Individual hospitals vary in balancing maximising benefit from thrombolysis vs. avoiding any possible harm.
-    
-    \item Combining potential changes (improving arrival-to-thrombolysis times to 30 mins, reducing ambulance call-to-hospital-arrival times by 15 minutes, having all teams attain the current upper-quartile performance in determining stroke onset time, and applying decision making similar to high thrombolysing units) would be expected to increase thrombolysis use in patients arriving by ambulance from 13\% to 20\% and double the clinical benefit (additional patients discharged mRS 0-1) from thrombolysis.
-    
-    \item The largest single factor in improving both thrombolysis use and outcomes is differences in clinical decision-making. Stroke teams vary in clinical decision-making especially in subgroups of patients with features that make them non-ideal candidates for thrombolysis: mild stroke, pre-existing disability, and imprecisely known stroke onset times.
-    
-    \item High thrombolysing units are predicted to be generating more net benefit (including better avoidance of mortality and severe disability) than low thrombolylsing units.
-    
-    \item A health economics model, using the output from the outcome prediction model, estimated that thrombolysis produces an additional 0.26 QALY for each person treated.
-    \end{itemize}
+Principle findings are outlined in section \ref{sec:papers}.
 
 \subsection{Clinical discussion}
